language/move-lang/tests/move_check/naming/global_builtin_many_type_arguments.exp
error[E03007]: too many type arguments
  ┌─ tests/move_check/naming/global_builtin_many_type_arguments.move:8:9
  │
8 │         borrow_global<R1, R2>(@0x1);
  │         ^^^^^^^^^^^^^--------------
  │         │
  │         Expected 1 type argument(s) but got 2
  │         Invalid call to builtin function: 'borrow_global'

error[E03007]: too many type arguments
  ┌─ tests/move_check/naming/global_builtin_many_type_arguments.move:9:9
  │
9 │         exists<R1, R2, R3>(@0x1);
  │         ^^^^^^------------------
  │         │
  │         Expected 1 type argument(s) but got 3
  │         Invalid call to builtin function: 'exists'

error[E03007]: too many type arguments
   ┌─ tests/move_check/naming/global_builtin_many_type_arguments.move:10:17
   │
10 │         R1 {} = move_from<R1, R2, R3, R4>(@0x1);
   │                 ^^^^^^^^^----------------------
   │                 │
   │                 Expected 1 type argument(s) but got 4
   │                 Invalid call to builtin function: 'move_from'

error[E03007]: too many type arguments
   ┌─ tests/move_check/naming/global_builtin_many_type_arguments.move:11:9
   │
11 │         move_to<R1, R2, R3, R4, R5>(account, R1{});
   │         ^^^^^^^-----------------------------------
   │         │
   │         Expected 1 type argument(s) but got 5
   │         Invalid call to builtin function: 'move_to'

